Fix #1079 Don't try to modify an unmodifiable list